# connectfour

./: .gitignore  Dockerfile  README.md  app.py  battle.py  boardfunctions.py  brutalcomputer.py  connectfour.py  dashgui.py  environment.yml  pyproject.toml  requirements.txt  viergewinnt.py
.github/workflows/: main_connectfour4.yml
assets/: eigenes.css  skeleton.css
